2017-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled to test release 1.64.0-0

	* inst/include/boost/*: Upgraded to Boost 1.65

	* inst/include/boost/numeric/odeint/stepper/generation/: As before
	rename karp54_classic.hpp to karp54_cl.hpp, adjust generation.hpp
	* inst/include/boost/variant/detail/forced_return.hpp: As before
	ensure R_NO_REMAP is defined; call Rf_error() in lieu of abort()
	* inst/include/boost/numeric/ublas/storage.hpp : Add missing include
	for boost/serialization/array_wrapper.hpp

2017-08-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled to test release 1.64.0-0

	* inst/include/boost/*: Upgraded to Boost 1.64; added new
	libraries 'align' and 'sort'; include full 'multiprecision' 

	* inst/include/boost/numeric/odeint/stepper/generation/: As before
	rename karp54_classic.hpp to karp54_cl.hpp, adjust generation.hpp
	* inst/include/boost/variant/detail/forced_return.hpp: As before
	ensure R_NO_REMAP is defined; call Rf_error() in lieu of abort()
	* inst/include/boost/numeric/ublas/storage.hpp : Add missing include
	for boost/serialization/array_wrapper.hpp

2017-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to run.sh from maintained for R and Travis

2016-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated as repo now has a more manageable footprint

2016-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* local/scripts/git-remove.sh: Script contributed in GitHub Issue #34
	to reduce disk footprint of the archive

2016-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 1.62.0-1

	* inst/include/boost/variant/detail/forced_return.hpp: Ensure
	R_NO_REMAP is defined

2016-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/boost/variant/detail/forced_return.hpp
	(forced_return_no_return): Call Rf_error() not abort()

2016-11-13  Dirk Eddelbuettel  <edd@debian.org>
