@@ -2221,10 +2221,12 @@ namespace boost { namespace numeric { namespace ublas {
                         index1 = it1_.index1 ();
                 }
                 size_type index2 = (*this) ().size1 ();
-                if (it2_ != it2_end_)
+                // cf warning from g++, also noted at GH repo at
+                // https://github.com/boostorg/ublas/issues/40
+                if (it2_ != it2_end_) {
                     if (it2_.index1 () <= i_)
                         ++ it2_;
-                    if (it2_ != it2_end_) {
+                    if (it2_ != it2_end_) 
                         index2 = it2_.index1 ();
                 }
                 i_ = (std::min) (index1, index2);
