@@ -1,6 +1,11 @@
+2017-08-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/boost/numeric/ublas/matrix_expression.hpp (boost):
+	Fourth local change suppressing a g++ warning, also see #40 upstream
+
 2017-08-22  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION (Version, Date): Rolled to test release 1.64.0-0
+	* DESCRIPTION (Version, Date): Rolled to test release 1.65.0-0
 
 	* inst/include/boost/*: Upgraded to Boost 1.65
 
